# autodoctor

./: .gitignore  .mutmut-cache  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RUNTIME_CADENCE_PLAN.md  allowed-commands.md  conftest.py  cosmic_ray_config.toml  cr-init.toml  cr-jinja-validator.toml  cr-knowledge-base.toml  cr-service-validator.toml  cr-validator.toml  hacs.json  index.md  mutmut_config.py  pyproject.toml  pyrightconfig.json  release-please-config.json  run_mutations.py  run_one_module.py  session-init-test.sqlite  session-init-test2.sqlite  session-init.sqlite  session-jinja-validator.sqlite  session-knowledge-base.sqlite  session-service-validator.sqlite  session-validator.sqlite  session.sqlite  setup.cfg
.github/: dependabot.yml
.github/workflows/: build-card.yml  ci.yml  cleanup-branches.yml  dev-release.yml  release-please.yml
.hypothesis/constants/: 12190fdeb618d27b  13326008ae343c32  1a6f03e6ee812da2  1c4a58fe73e9c8e7  44c1bac19b64e4de  4dc7be82a33b3090  593aa1ea385bf785  607a2de3b2cb9caf  65cfb2bf5e6db99b  711260e9566fe857  7dc1eac8bba82e56  801e59999dad83ac  87c7c8f03ca335f6  b2e6d5cc96760c85  b6f4d0c7001283ce  cae8ec09b99de7f3  cbec1a423b6c576f  cce79a00f7553073  e854a5a9ccfd1be4  ee9c43fcb099f30b
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
custom_components/autodoctor/: __init__.py  action_walker.py  analyzer.py  binary_sensor.py  bocpd_detector.py  config_flow.py  conflict_detector.py  const.py  device_class_states.py  domain_attributes.py  entity_graph.py  fix_engine.py  ha_catalog.py  jinja_validator.py  knowledge_base.py  learned_states_store.py  manifest.json  models.py  reachability_validator.py  reporter.py  runtime_event_store.py  runtime_health_state_store.py  runtime_monitor.py  sensor.py  service_validator.py  services.yaml  simulator.py  strings.json  suggestion_learner.py  suppression_store.py  template_semantics.py  template_utils.py  validator.py  websocket_api.py
custom_components/automation_mutation_tester/: __init__.py  analyzer.py  binary_sensor.py  config_flow.py  const.py  device_class_states.py  knowledge_base.py  manifest.json  models.py  sensor.py  simulator.py  strings.json  validator.py
docs/: validation-narrowing-checklist.md  validation-scope-audit.md  what-autodoctor-validates.md
docs/plans/: 2026-01-26-automation-mutation-tester-design.md  2026-01-26-automation-mutation-tester-implementation.md  2026-01-27-conflict-detection-design.md  2026-01-27-conflict-detection-implementation.md  2026-01-27-entity-suggester-refactor-design.md  2026-01-27-persistent-suppressions-design.md  2026-01-27-validation-and-fix-suggestions-design.md  2026-01-27-validation-fix-suggestions-implementation.md  mvp-refactor.md  (+27 more)
scripts/: extract_ha_states.py  mutation_workflow.py  mutmut_subprocess_runner.py  pre_pr_checks.sh  pre_pr_policy.py  runtime_gap_backtest.py
tests/: __init__.py  conftest.py  test_action_walker.py  test_analyzer.py  test_architectural_improvements.py  test_async_runtime_event_store.py  test_attribute_value_validation.py  test_binary_sensor.py  test_card_edit_link.py  test_config_flow.py  test_conflict_detector.py  test_const_runtime_store_flags.py  test_defect_regressions.py  test_device_class_states.py  test_entity_graph.py  test_entity_suggestion.py  test_environment.py  test_fix_engine.py  test_ha_catalog.py  test_init.py  test_jinja_validator.py  test_knowledge_base.py  test_learned_states_store.py  test_models.py  test_property_based.py  test_property_based_jinja.py  test_property_based_remaining.py  test_property_based_validator.py  test_reachability_validator.py  test_reporter.py  test_runtime_alert_rate_limit.py  test_runtime_bocpd.py  test_runtime_burst_detector.py  test_runtime_event_store.py  test_runtime_gap_backtest_script.py  test_runtime_gap_detector.py  test_runtime_gap_replay.py  test_runtime_health_state_store.py  test_runtime_ingest_logging.py  test_runtime_monitor.py  (+10 more)
(+31 files in other folders)
