[project]
name = "autodoctor"
version = "1.1.0"
description = "Home Assistant integration that validates automations to detect state-related issues"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "tdd-guard-pytest",
    "mutmut>=2.5.0,<3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
tdd_guard_project_root = "/Users/matt/Desktop/Projects/autodoctor"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested ifs can be more readable
    "SIM108", # ternary isn't always clearer
]

[tool.ruff.format]
quote-style = "double"

[tool.mutmut]
paths_to_mutate = [
    "custom_components/autodoctor/validator.py",
    "custom_components/autodoctor/service_validator.py",
    "custom_components/autodoctor/jinja_validator.py",
    "custom_components/autodoctor/knowledge_base.py",
]
tests_dir = "tests/"
