[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodoctor"
version = "1.1.0"
description = "Home Assistant integration that validates automations to detect state-related issues"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "tdd-guard-pytest",
    "mutmut>=3.4.0",
    "hypothesis>=6.0.0",
    "atheris>=2.3.0; platform_system == 'Linux'",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
tdd_guard_project_root = "/Users/matt/Desktop/Projects/autodoctor"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "A",      # flake8-builtins (builtin shadowing)
    "BLE",    # flake8-blind-except
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie (misc bug patterns)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM102",  # nested ifs can be more readable
    "SIM108",  # ternary isn't always clearer
    "BLE001",  # blind exception catches are acceptable for defensive error handling in HA integrations
]

[tool.ruff.format]
quote-style = "double"

[tool.mutmut]
paths_to_mutate = [
    "custom_components/autodoctor/analyzer.py",
    "custom_components/autodoctor/validator.py",
    "custom_components/autodoctor/jinja_validator.py",
]
# Ensure mutated modules run in a complete package context inside ./mutants.
also_copy = ["custom_components/autodoctor"]
tests_dir = []
pytest_add_cli_args_test_selection = [
    "tests/test_analyzer.py",
    "tests/test_validator.py",
    "tests/test_jinja_validator.py",
    "tests/test_property_based.py",
    "tests/test_property_based_validator.py",
    "tests/test_property_based_jinja.py",
    "tests/test_property_based_remaining.py",
]
